<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.org.cruzverde"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ayuda_background" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/btn_volver"
        android:background="@drawable/internas_logo"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/label_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/menu_principal_footer_background"
        android:gravity="center"
        android:orientation="vertical" >

        <com.org.cruzverde.util.MyTextView
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/version"
            android:textColor="@android:color/white"
            android:textSize="12sp"
     />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/label_ayuda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:orientation="vertical" >

        <com.org.cruzverde.util.MyTextView
            android:id="@+id/TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/ayuda"
            android:textColor="#006626"
            android:textSize="15sp"
            android:textStyle="bold"
            app:fontName="italic.ttf" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/label_ayuda"
        android:layout_alignParentRight="true"
        android:background="@drawable/internas_boton_volver"
        android:orientation="vertical"
        android:padding="10dp" >

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/label_version"
        android:layout_below="@+id/titulo"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <com.org.cruzverde.util.MyTextView
                android:id="@+id/contenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/terminoslegales"
                android:textColor="@android:color/black"
                app:fontName="regular.ttf" />
        </LinearLayout>

    </ScrollView>

    <com.org.cruzverde.util.MyTextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/label_ayuda"
        android:padding="10dp"
        android:text="@string/preguntas_frecuentes"
        app:fontName="italic.ttf" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/label_ayuda"
        android:src="@drawable/ayuda_linea_corta" />

</RelativeLayout>