<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.org.cruzverde"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/lheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/btn_volver"
        android:background="@drawable/internas_logo"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lheader"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="visible" >

        <com.org.cruzverde.util.MyTextView
            android:id="@+id/com.org.cruzverde.util.MyTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:text="@string/contacto"
            android:textColor="#006626"
            android:textSize="15sp"
            android:textStyle="bold"
            app:fontName="italic.ttf" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:background="@drawable/menu_principal_footer_background"
        android:gravity="center"
        android:orientation="vertical" >

        <com.org.cruzverde.util.MyTextView
            android:id="@+id/com.org.cruzverde.util.MyTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/version"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/titulo" >

        <RelativeLayout
            android:id="@+id/fondo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/domicilios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/contacto_domicilio" />

            <com.org.cruzverde.util.MyTextView
                android:id="@+id/com.org.cruzverde.util.MyTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/domicilios"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/texto_contactos"
                android:textStyle="bold"
                app:fontName="italic.ttf" />
        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/btn_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/internas_boton_volver"
        android:orientation="vertical" >
    </LinearLayout>

</RelativeLayout>